Pequeñas correcciones
